<resources>
    <string name="app_name">TP1Calculatrice</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_delete">\u003C</string>
    <string name="button_erase">c</string>
    <string name="button_plus">+</string>
    <string name="button_moins">-</string>
    <string name="button_x">*</string>
    <string name="button_divise">/</string>
    <string name="button_pourcentage">%</string>
    <string name="button_egale">=</string>
    <string name="button_point">.</string>
</resources>
